test_regress/t/t_dpi_prot_inout_bad.out
%Error: Internal Error: t/t_dpi_prot_inout_bad.v:8: ../V3DpiProtect.cpp:364: Unsupported port direction for --dpi-protect: INOUT
      inout  z,
             ^
                        ... See the manual and http://www.veripool.org/verilator for more assistance.
%Error: Command Failed
